tests/baselines/reference/voidOperatorInvalidOperations.errors.txt
==== tests/cases/conformance/expressions/unaryOperators/voidOperator/voidOperatorInvalidOperations.ts (3 errors) ====
    // Unary operator void
    
    // operand before void
    var ANY = ANY void ;    //expect error
                  ~~~~
!!! error TS1005: ',' expected.
                       ~
!!! error TS1109: Expression expected.
    
    // miss an operand
    var ANY1 = void ;
                    ~
!!! error TS1109: Expression expected.